# servicenow

./: .gitignore  New_dataset.xlsx  incidents_200_dataset.xlsx  main.py  my_dataset.xlsx  problem_dataset.xlsx  pyproject.toml
incident_analysis/: EXPLANATION.txt  PRODUCTION_GUIDE.txt  README_CHROMA.md  ServiceNow_Banking_Incidents_500.xlsx  Updated Dataset.xlsx  check_ollama.py  compare_performance.py  d2.json  d3.json  dataset_4500_similar.xlsx  generate_embeddings.py  incident_analysis_graph.py  incident_analysis_langgrah_5000.py  incident_analysis_langgraph.py  incident_matcher_chroma.py  incident_matcher_vector_only.py  incident_matches.db  incident_pattern_matcher.py  incident_pattern_matcher_02.py  incident_pattern_matcher_prod.py  incident_patterns_final.json  incident_patterns_graph.json  incident_patterns_top_15.json  prepare_data.py  requirements.txt  requirements_prod.txt  run.py  streamlit_app.py  streamlit_app_v2.py  streamlit_app_vector.py  test.csv  test_chroma_performance.py  test_cosine_similarity.py  test_incident_pattern_matcher_02.py  test_incidents.json  test_with_embeddings.json  train.csv  train_incidents.json  train_with_embeddings.json  updated_finder_4500.py
