[project]
name = "servicenow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=0.1.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.50",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0"
]
